tests-integration/fixtures/checking/1781171580_typed_holes/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
termHole :: Int -> Int
recordPunHole :: { punInt :: Int, punString :: String } -> Int
instanceTypeHoleMember ::
  forall (@implicit :: Type).
    InstanceTypeHole (implicit :: Type) => (implicit :: Type) -> (implicit :: Type)

Types
TypeHole :: forall (t :: Type). (t :: Type) -> Type
InstanceTypeHole :: Type -> Constraint

Synonyms
type TypeHole a = ?3

Classes
class forall (implicit :: Type). InstanceTypeHole (implicit :: Type)
  instanceTypeHoleMember ::
  forall (@implicit :: Type).
    InstanceTypeHole (implicit :: Type) => (implicit :: Type) -> (implicit :: Type)

Instances
instance forall (t :: Type). InstanceTypeHole (t :: Type)

Diagnostics
error[TypeHole]: Type hole '?type' has inferred type: ?3 :: Type
  --> 14:19..14:24
   |
14 | type TypeHole a = ?type :: Type
   |                   ^~~~~
  trivia: a :: (t :: Type) is in scope
error[TermHole]: Hole '?term' has inferred type: Int
  --> 12:5..12:10
   |
12 |     ?term
   |     ^~~~~
  trivia: argument :: Int is in scope
  trivia: localInt :: Int is in scope
error[TermHole]: Hole '?pun' has inferred type: Int
  --> 17:39..17:43
   |
17 | recordPunHole { punInt, punString } = ?pun
   |                                       ^~~~
  trivia: punInt :: Int is in scope
error[TypeHole]: Type hole '?implicit' has inferred type: (t1 :: Type) :: Type
  --> 23:29..23:38
   |
23 |   instanceTypeHoleMember :: ?implicit -> implicit
   |                             ^~~~~~~~~
  trivia: implicit :: Type is in scope
